src/main/kotlin/com/example/ddd/order/domain/errors/OrderNotFoundException.kt
package com.example.ddd.order.domain.errors

class OrderNotFoundException(
  val id: String,
  message: String? = "",
  throwable: Throwable? = null
) : Exception(message, throwable)